--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://krishna0rothe.github.io/gsip-frontend",
-  "name": "gsip-frontend",
+  "homepage": "https://krishna0rothe.github.io/gov-dashboard/home",
+  "name": "gov-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
