--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://krishna0rothe.github.io/gov-dashboard/home",
+  "homepage": "https://krishna0rothe.github.io/gov-dashboard",
   "name": "gov-dashboard",
   "version": "0.1.0",
   "private": true,
